force-app/chapter00/default/objects/Constituent__c/Constituent__c.object-meta.xml
<CustomObject>
    <description>A custom object to hold information about the artist for each asset.</description>
    <label>Constituent</label>
    <nameField>
        <label>Constituent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constituents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>