force-app/chapter00/default/objects/Constituent__c/fields/Constituent_ID__c.field-meta.xml
<CustomField>
    <fullName>Constituent_ID__c</fullName>
    <description>The external ID for The Metropolitan&apos;s Open Access database.</description>
    <externalId>true</externalId>
    <label>Constituent ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>