force-app/chapter00/default/objects/Constituent__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>The gender of the constituent.</description>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>