force-app/chapter00/default/objects/Constituent__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The role that the Constituent played in the creation of the asset.</description>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>