force-app/chapter00/default/objects/Constituent__c/fields/ULAN_URL__c.field-meta.xml
<CustomField>
    <fullName>ULAN_URL__c</fullName>
    <description>The ULAN URL for the constituent.</description>
    <label>ULAN URL</label>
    <type>Url</type>
</CustomField>