force-app/chapter00/default/objects/Constituent__c/fields/Wikidata_URL__c.field-meta.xml
<CustomField>
    <fullName>Wikidata_URL__c</fullName>
    <description>The Wikidata URL for the constituent.</description>
    <label>Wikidata URL</label>
    <type>Url</type>
</CustomField>